# sample-service-migration

./: .gitignore  .graphifyignore  .mcp.json  LLM_MIGRATION_RUNBOOK.md  Makefile  README.md  graphify.yml  pyproject.toml  resume
.agents/: AGENTS.md
.claude/: CLAUDE.md
.github/: copilot-instructions.md
ai/: cookbook.md  database-rules.md
config/manifests/: container_manifest.yaml  container_type_manifest.yaml  cv_property_type_manifest.yaml  cv_sample_quality_manifest.yaml  event_manifest.yaml  partner_manifest.yaml  project_manifest.yaml  project_membership_manifest.yaml  sample_manifest.yaml  sample_property_manifest.yaml  sample_property_metadata_manifest.yaml  sample_quality_manifest.yaml  sample_type_manifest.yaml  sample_type_quality_metadata_manifest.yaml  task_manifest.yaml  work_list_event_manifest.yaml  work_list_item_manifest.yaml  work_list_manifest.yaml
config/scripts/: container_type_transform.js  (+5 more)
docs/: data-requirements.md  migration-design-analysis.md  migration-orchestration.md  migration-strategy.md  sample-properties-migration-plan.md  sample-qualities-migration-plan.md  sample-type-migration-plan.md  schema-mapping.md  staging-schema-analysis.md  technical-execution.md  tool-integration.md  work-lists-migration-plan.md  work_list_migration_report.md
export/: batch_list.sql  batch_sample_list.sql  tables.md
loader/: build.gradle  build.gradle.kts  settings.gradle  settings.gradle.kts
scripts/: PivotHelper.java  README.md  export_batch_lists.py  export_legacy_events.py  export_work_list_events.py
tools/: db2-mcp-server.sh
(+10 files in other folders)
