[project]
name = "sample-service-migration"
version = "0.1.0"
description = "Scripts and tools for the sample service data migration."
requires-python = ">=3.9"

dependencies = [
    "pandas~=2.2",
    "psycopg2-binary~=2.9",
    "sqlalchemy~=2.0",
    "ipython~=8.26",
    "graphify~=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.3",
    "black~=24.4",
    "ruff~=0.5",
]
